--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-sass":"node-sass --include-path scss projects/angular2-multiselect-dropdown-lib/themes/default.theme.scss projects/angular2-multiselect-dropdown-lib/themes/default.theme.css",
     "build-package":"npm run build-sass && ng-packagr -p projects/angular2-multiselect-dropdown-lib/package.json",
     "github-pages": "ng build --prod --base-href /angular2-multiselect-dropdown/",
-    "postinstall": "ivy-ngcc"
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
