--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "esnext",
     "lib": [
       "es2020",
@@ -24,7 +24,8 @@
         "dist/angular2-multiselect-dropdown-lib/angular2-multiselect-dropdown-lib",
         "dist/angular2-multiselect-dropdown-lib"
       ]
-    }
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableIvy": true,
